[project]
name = "netbalance"
version = "0.1.0"
description = "A Systematic Evaluation of X-Y Association Prediction Framework"
authors = [{ name = "Sobhan Ahmadian Moghadam" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "keras (>=3.8.0,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "distributed (>=2025.2.0,<2026.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "networkx (>=3.5,<4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "netbalance", from = "src" }]
